se completa crud banner una sola vista

--- a/public/css/admin-noti.css
+++ b/public/css/admin-noti.css
@@ -1,3 +1,29 @@
+.btn-magenta{
+    background: #FE3EB2;
+    color: azure;
+}
+.btn-magenta:hover {
+    background: #d10b82;
+    color: azure;
+}
+.btn-gris{
+    color: white;
+    background: #343a40;
+    border-color: #343a40;
+}
+.btn-gris:hover{
+    color: white;
+    background: #343a40a2;
+    border-color: #343a40a2;
+}
+.btn-rojo{
+    background: #fd0101;
+    color: azure;
+}
+.btn-rojo:hover{
+    background: #c20101;
+    color: azure;
+}
 .btn-gris{
     color: white;
     background: #343a40;
