ajuste login a pantalla 1920*1080

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,9 +1,6 @@
 .bg-login{
     background: #343a4093;
-    height: 700px;
     background-image: url(/images/textura-pie-pagina.png);
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .navbar-logo{
@@ -20,20 +17,22 @@
     margin-left: 50px;
 }
 
-.contenedor{
-    margin: 30px 50px;
-}
-
 .contenedor-formulario{
     display: flex;
+    margin: 40px 50px;
 }
 
 .imagen-formulario{
-    width: 800px; 
+    width: 1200px;
     margin-left: 50px;
 }
 
-
+@media screen and (max-width: 480px){
+ 
+    .imagen-formulario{
+        width: 800px;
+    }
+}
 
 /* .img-formu{
     position: relative;
