--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1521,7 +1521,7 @@ hr.line-title-sunco {
    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.648);
 }
 
-
+/* 
 .btn-editar{
-   background-color: ;
-  }
+   background-color;
+  } */
